Modularizing checkstyle files

--- a/site/content/pages/index.html
+++ b/site/content/pages/index.html
@@ -13,7 +13,7 @@
 		<li>Generate a <code>checkstyle.properties</code> file
 			<pre style="width: 300px; margin-top: 10px;" class="prettyprint">basedir=/path/to/src</pre>
 		</li>
-		<li>Download the most recent <code>apex_checks.xml</code> <a href="https://raw.githubusercontent.com/pcon/apex-styleguide/master/checkstyle/apex_checks.xml">file</a></li>
-		<li>Run checkstyle against a single file <code>java -jar checkstyle.jar -p checkstyle.properties -c apex_checks.xml /path/to/src/classes/MyClass.cls</code></li>
+		<li>Download the most recent <code>apex_checks.xml</code> <a href="https://raw.githubusercontent.com/pcon/apex-styleguide/master/apex_checks_combined.xml">file</a></li>
+		<li>Run checkstyle against a single file <code>java -jar checkstyle.jar -p checkstyle.properties -c apex_checks_combined.xml /path/to/src/classes/MyClass.cls</code></li>
 	</ol>
 {% endblock %}
