Fixing navigation and title issues

--- a/site/content/pages/annotations.html
+++ b/site/content/pages/annotations.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
-{% set page.title = "Home" %}
-{% set page.nav = "home" %}
+{% set page.title = "Annotations" %}
+{% set page.nav = "annotations" %}
 
 {% block content %}
 	<h1>Annotations</h1>
