--- a/site/content/pages/soql.html
+++ b/site/content/pages/soql.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
-{% set page.title = "Home" %}
-{% set page.nav = "home" %}
+{% set page.title = "SOQL" %}
+{% set page.nav = "soql" %}
 
 {% block content %}
 	<h1>SOQL</h1>
